--- a/process_transaction_on_loading.html
+++ b/process_transaction_on_loading.html
@@ -54,13 +54,10 @@
 <div class="container">
     <div class="header">
         <div class="row">
-            <div class="logo-container col-12 col-sm-6">
+            <div class="logo-container col-12">
                 <p class="text-left">
                     <img src="ezecom-logo.svg" alt="EZECOM Logo">
                 </p>
-            </div>
-            <div class="timeout-container col-12 col-sm-6">
-                <p class="text-right text-white">Time Out​ In : 11:59</p>
             </div>
         </div>
     </div>
